<resources>
    <string name="app_name">Donation v5.0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Donation String 1.0 -->
    <string name="donateTitle">Welcome Hommer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <!--Donation 2.0-->
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="menuDonate">Donate</string>
    <!--    Donation3.0-->
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <!--Donation 4.0-->
    <string name="menuReset">Reset</string>
</resources>