<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.donation.ie.example.donation.Donate">
    <item android:id="@+id/menuReport"
        android:orderInCategory="100"
        android:title="@string/menuReport"
        android:onClick="report"
        app:showAsAction="never"/>
    <item android:id="@+id/menuDonate"
        android:orderInCategory="100"
        android:title="@string/menuDonate"
        app:showAsAction="never"
        android:onClick="donate"/>
    <item android:id="@+id/menuReset"
        android:orderInCategory="100"
        android:title="@string/menuReset"
        app:showAsAction="never"
        android:onClick="reset"></item>
</menu>